--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
                                 <li>
                                     <a><i class="fa fa-desktop"></i> Quản lý Trang Chính <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="general_elements.html">General Elements</a></li>
+                                        <li><a href="@Url.Action("Index", "AboutDentals")">Trang giới thiệu</a></li>
                                         <li><a href="media_gallery.html">Media Gallery</a></li>
                                         <li><a href="typography.html">Typography</a></li>
                                         <li><a href="icons.html">Icons</a></li>
