--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
                                     <a><i class="fa fa-desktop"></i> Quản lý Trang Chính <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="@Url.Action("Index", "AboutDentals")">Trang giới thiệu</a></li>
-                                        <li><a href="media_gallery.html">Media Gallery</a></li>
-                                        <li><a href="typography.html">Typography</a></li>
-                                        <li><a href="icons.html">Icons</a></li>
-                                        <li><a href="glyphicons.html">Glyphicons</a></li>
+                                        <li><a href="@Url.Action("Index", "Doctors")">Trang bác sĩ</a></li>
+                                        <li><a href="@Url.Action("Index", "Services")">Trang dịch vụ</a></li>
+                                        <li><a href="@Url.Action("Index", "BlogPosts")">Trang bài viết</a></li>
+                                        <li><a href="@Url.Action("Index", "Products")">Trang sản phẩm</a></li>
                                         <li><a href="widgets.html">Widgets</a></li>
                                         <li><a href="invoice.html">Invoice</a></li>
                                         <li><a href="inbox.html">Inbox</a></li>
